RenderWidget::windowRect and viewRect should apply device emulation transform.

Since Blink's popup menus now rely on the RenderWidget keeping track of the
view rect, the rect must return the emulated position of the popup. This is
symmetric with how setWindowRect applies the transformation when setting the
rect.

BUG=642349

Review-Url: https://codereview.chromium.org/2394073002
Cr-Commit-Position: refs/heads/master@{#423350}

Former-commit-id: 841fdc7222eefdaf63e97f3c57dfe6ea16b6b2b0